.provarCaches/00D410000011HE0EAM/objects/rstk__sytimetxn__c.object
<CustomObject>
    <description>sytimetxn__c</description>
    <fields>
        <fullName>rstk__sytimetxn_baserate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Base Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_employee__c</fullName>
        <inlineHelpText>The Employee</inlineHelpText>
        <label>Employee</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_factor__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Rate Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_hours__c</fullName>
        <inlineHelpText>Number of hours</inlineHelpText>
        <label>Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_qtycompl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Complete</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_sessioninfo__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>T&amp;A Session Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_setup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Setup Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_timein__c</fullName>
        <inlineHelpText>Employee clock in time</inlineHelpText>
        <label>Time In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_timeout__c</fullName>
        <inlineHelpText>Employee clock out time</inlineHelpText>
        <label>Time Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_timetype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Time Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_txnid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>T&amp;A Transaction ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_wocst__c</fullName>
        <inlineHelpText>The work order id</inlineHelpText>
        <label>Work Order ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sytimetxn_woordop__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Time Transaction</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>